<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ff494949"
    android:id="@+id/creditLayout"
    tools:context=".CardActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@+string/cc_pay_title"
        android:gravity="center"
        android:id="@+id/txtPayTitle"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtPayTitle"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cc_num_title"
        android:id="@+id/txtCCNumTitle"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCCNumTitle"
        android:ems="10"
        android:id="@+id/txtCCNum"
        android:background="#ffffff"
        android:inputType="number"
        android:maxLength="16"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtCCNum"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cc_name_title"
        android:id="@+id/txtCCNameTitle"
        android:textColor="#ffffff" />

   <EditText
       android:layout_width="241dp"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtCCNameTitle"
       android:id="@+id/txtCCName"
       android:background="#ffffff" />

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_below="@+id/txtCCName"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:id="@+id/txtExpireTitle"
       android:text="@string/cc_expire_title"
       android:textColor="#ffffff" />

   <TextView
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txtExpireTitle"
        android:id="@+id/txtExpireSlash"
        android:gravity="center"
        android:textColor="#ffffff"
        android:text="/"
        android:background="#ff000000" />

   <Spinner
       android:layout_width="40dp"
       android:layout_height="25dp"
       android:layout_below="@+id/txtExpireTitle"
       android:id="@+id/monthSpinner"
       android:background="#ffffff"
       android:entries="@array/month"
       android:prompt="@array/month"
       />

   <Spinner
       android:layout_width="40dp"
       android:layout_height="25dp"
       android:layout_below="@+id/txtExpireTitle"
       android:layout_marginLeft="50dp"
       android:layout_marginStart="50dp"
       android:id="@+id/yearSpinner"
       android:background="#ffffff"
       android:entries="@array/year"
       android:prompt="@array/year"
       />

   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="175dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtCCName"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtCVVTitle"
        android:text="@string/cc_cvv_title"
        android:textColor="#ffffff" />

   <EditText
        android:layout_width="66dp"
        android:layout_marginLeft="175dp"
        android:layout_marginStart="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCVVTitle"
        android:id="@+id/txtCVV"
        android:background="#ffffff"
       android:inputType="number"
       android:maxLength="4"/>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_below="@+id/txtExpireSlash"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:text="@string/choice_view_text"
       android:id="@+id/txtOrderTitle"
       android:textColor="#ffffff"/>

   <EditText
       android:layout_width="match_parent"
       android:gravity="start"
       android:layout_height="150dp"
       android:layout_below="@+id/txtOrderTitle"
       android:inputType="textMultiLine"
       android:layout_alignParentStart="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentEnd="true"
       android:layout_alignParentRight="true"
       android:ems="10"
       android:id="@+id/txtOrder"
       android:background="#ffffff"
       android:clickable="false"
       android:cursorVisible="false"
       android:focusable="false"
       android:focusableInTouchMode="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtOrder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/txtCOrderTotal"
        android:text="@string/order_view_title"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/orderCTotal"
        android:layout_below="@+id/txtCOrderTotal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:background="#ffffff"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

   <TableRow
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/orderCTotal">

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cc_cancel"
          android:id="@+id/btnCCCancel"
          android:textColor="#ffffff"
          android:layout_weight="1"/>

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cc_submit"
          android:id="@+id/btnCCSubmit"
          android:layout_weight="1"
          android:textColor="#ffffff"/>
   </TableRow>



</RelativeLayout>